--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         body {
             font-family: 'Inter', sans-serif;
             background-color: #f3f4f6;
-            background-image: url('https://mir-s3-cdn-cf.behance.net/project_modules/disp/f33f6f72318455.5be33406354a2.gif');
+            background-image: url('https://66.media.tumblr.com/a769ad747dd4b3ae930d3962f479dcaa/tumblr_nvpap59jyb1sg1ksjo1_500.gif');
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center center;
