--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
     <!-- The Header Box -->
     <div class="header-container p-6 md:p-8 text-center">
-        <h1 class="text-4xl font-bold text-gray-200">The WeirdHat Hub</h1>
+        <h1 class="text-4xl font-bold text-gray-200">WeirdHat 🧢</h1>
         <p class="text-gray-400 mt-2">A place for hat enthusiasts. Share your latest creations!</p>
     </div>
 
